launchpad-buildd (222) UNRELEASED; urgency=medium

  * Remove use of six.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 12 Sep 2022 09:50:13 +0100

launchpad-buildd (221) focal; urgency=medium

  [ Andy Whitcroft ]
  * Include Build-Depends-Arch when considering direct dependancies
    (LP: #1988999)

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 08 Sep 2022 12:19:18 +0100

launchpad-buildd (220) focal; urgency=medium

  * Work around https://github.com/lxc/lxcfs/issues/553 by unmounting
    /proc/cpuinfo in LXD-based armhf builds.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 26 Aug 2022 11:50:02 +0100

launchpad-buildd (219) focal; urgency=medium

  * Provide additional package repositories for CI builds rather than replacing
    the base repositories.

 -- Jürgen Gmach <juergen.gmach@canonical.com>  Fri, 19 Aug 2022 17:22:00 +0200

launchpad-buildd (218) focal; urgency=medium

  * Use a common output directory for all lpcraft jobs.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 04 Aug 2022 10:31:56 +0100

launchpad-buildd (217) focal; urgency=medium

  [ Colin Watson ]
  * Improve deployment documentation.
  * Make URL sanitization a little less greedy.

  [ Jürgen Gmach ]
  * Pass secrets via a YAML configuration file in order to prevent
    credentials from being leaked in logfiles. 

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 29 Jul 2022 16:13:37 +0100

launchpad-buildd (216) focal; urgency=medium

  [ Andrey Fedoseev ]
  * Allow specifying target architecture for snaps via
    SNAPCRAFT_BUILD_FOR environment variable

  [ Colin Watson ]
  * Add a timeout when revoking proxy tokens.
  * Log SHA-512 hash of built snaps (LP: #1979844).
  * Revise ordering of deployment documentation.
  * Gather *.debug from snap builds.

  [ Jürgen Gmach ]
  * Pass secrets to the CI runner.

 -- Jürgen Gmach <juergen.gmach@canonical.com>  Wed, 13 Jul 2022 15:19:38 +0200

launchpad-buildd (215) focal; urgency=medium

  [ Jürgen Gmach ]